--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "runSandbox": "npx ampx sandbox"
   },
   "dependencies": {
-    "aws-amplify": "^6.12.1",
+    "@aws-amplify/ui-react": "^6.9.3",
+    "aws-amplify": "^6.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
